--- a/TasksManagementSystem/src/main/resources/application.properties
+++ b/TasksManagementSystem/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=TasksManagementSystem
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/tasks_management_system?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=your_db_password
+spring.datasource.password=Abdullah_2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate JPA Configuration
