--- a/TasksManagementSystem/src/main/resources/application.properties
+++ b/TasksManagementSystem/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=TasksManagementSystem
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/tasks_management_system?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tasks_management_system?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Abdullah_2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Redis Caching configuration
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+logging.level.org.springframework.data.redis=DEBUG
+logging.level.org.springframework.cache=DEBUG
 
 # Hibernate JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
